--- a/marcus/depoy/docker-compose.yaml
+++ b/marcus/depoy/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
     environment:
       - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
       - magic_key=${MAGIC_KEY}
-      - AUDIO_DIR=/audio/audio
+      - AUDIO_DIR=/audio
       - OPEN_ROUTER_KEY=${OPEN_ROUTER_KEY}
     volumes:
-      - ./audio:/audio/audio
+      - ./audio:/audio
     networks:
       - marcus-network
 
