fix memes command

--- a/marcus/package/Dockerfile
+++ b/marcus/package/Dockerfile
@@ -1,9 +1,14 @@
-FROM marcus-base:latest
+FROM marcus-base:latest as build
 
 WORKDIR /audio
 
 COPY .. .
 ENV CGO_ENABLED=1
+
+RUN /usr/local/go/bin/go mod download
+
+FROM build as fin
+
 RUN /usr/local/go/bin/go build -o /marcus
 
 CMD ["/marcus"]
