--- a/marcus/package/Dockerfile-base
+++ b/marcus/package/Dockerfile-base
@@ -1,5 +1,8 @@
 FROM ubuntu:latest
 
+LABEL org.opencontainers.image.source=https://github.com/caffeinatedtoad/discord-bots
+LABEL org.opencontainers.image.description="Marcus amd64 Base"
+
 RUN apt-get -y update
 RUN apt install -y wget
 
