--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   build-base-arm64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
       packages: write
@@ -118,7 +118,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   build-marcus-arm64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     needs: build-base-arm64
     permissions:
       contents: read
