--- a/marcus/chart/marcus/templates/deployment.yaml
+++ b/marcus/chart/marcus/templates/deployment.yaml
@@ -18,3 +18,12 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          - name: "DISCORD_BOT_TOKEN"
+            value: "{{ .Values.discord.token }}"
+          - name: "magic_key"
+            value: "{{ .Values.misc.magic_key }}"
+          - name: "OPEN_ROUTER_KEY"
+            value: "{{ .Values.tts.open_router  }}"
+          - name: "ELEVEN_LABS_API_KEY"
+            value: "{{ .Values.tts.eleven_labs }}"
