--- a/marcus/charts/marcus/templates/deployment.yaml
+++ b/marcus/charts/marcus/templates/deployment.yaml
@@ -20,10 +20,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: "DISCORD_BOT_TOKEN"
-              value: "{{ .Values.discord.token }}"
+              value: "{{- .Values.discord.token }}"
             - name: "magic_key"
-              value: "{{ .Values.misc.magic_key }}"
+              value: "{{- .Values.misc.magic_key }}"
             - name: "OPEN_ROUTER_KEY"
-              value: "{{ .Values.tts.open_router  }}"
+              value: "{{- .Values.tts.open_router  }}"
             - name: "ELEVEN_LABS_API_KEY"
-              value: "{{ .Values.tts.eleven_labs }}"
+              value: "{{- .Values.tts.eleven_labs }}"
