--- a/marcus/charts/marcus/templates/deployment.yaml
+++ b/marcus/charts/marcus/templates/deployment.yaml
@@ -24,6 +24,6 @@ spec:
             - name: "magic_key"
               value: "{{- .Values.misc.magic_key }}"
             - name: "OPEN_ROUTER_KEY"
-              value: "{{- .Values.tts.open_router  }}"
+              value: "{{ .Values.tts.open_router.key }}"
             - name: "ELEVEN_LABS_API_KEY"
-              value: "{{- .Values.tts.eleven_labs }}"
+              value: "{{ .Values.tts.eleven_labs.key }}"
