--- a/marcus/charts/marcus/templates/deployment.yaml
+++ b/marcus/charts/marcus/templates/deployment.yaml
@@ -27,3 +27,8 @@ spec:
               value: "{{ .Values.tts.open_router.key }}"
             - name: "ELEVEN_LABS_API_KEY"
               value: "{{ .Values.tts.eleven_labs.key }}"
+            - name: "MARCUS_AUDIO_DIR"
+              value: "{{ .Values.marcus.audio_dir }}"
+          volumeMounts:
+            - mountPath: "{{ .Values.marcus.audio_dir }}"
+              name: marcus-audio-store
