--- a/marcus/charts/marcus/templates/deployment.yaml
+++ b/marcus/charts/marcus/templates/deployment.yaml
@@ -32,3 +32,7 @@ spec:
           volumeMounts:
             - mountPath: "{{ .Values.marcus.audio_dir }}"
               name: marcus-audio-store
+      volumes:
+        - name: marcus-audio-store
+          persistentVolumeClaim:
+            claimName: marcus-audio-store
