working with pvcs

--- a/marcus/charts/marcus/templates/pvc.yaml
+++ b/marcus/charts/marcus/templates/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: marcus-audio-store
 spec:
-  storageClassName: openebs-hostpath
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
