--- a/marcus/charts/marcus/templates/pvc.yaml
+++ b/marcus/charts/marcus/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: marcus-audio-store
+  name: marcus-data
   labels:
     type: local
 spec:
@@ -10,6 +10,14 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage
+  storageClassName: local-path
   local:
-    path: /marcus/audio
+    path: /marcus
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - {{ .Values.pvc_scheduling.node_name }}
