allot cpu and mem to marcus, adjust security context for better performance.

--- a/marcus/charts/marcus/templates/deployment.yaml
+++ b/marcus/charts/marcus/templates/deployment.yaml
@@ -18,6 +18,10 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           env:
             - name: "DISCORD_BOT_TOKEN"
               value: "{{- .Values.discord.token }}"
